...

import NumFacts
import SwifterSwift
import UIKit

final class FactViewController: UIViewController {
    private lazy var numberLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
        label.textAlignment = .center
        label.font = UIFont(name: "OpenSans-Bold", size: 28)
        label.textColor = .white
        return label
...
        label.lineBreakMode = .byWordWrapping
        label.font = UIFont(name: "OpenSans-SemiBold", size: 16)
        label.textColor = .white
        return label
    }()
    
    private lazy var backButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.backgroundColor = .clear
        button.setImage(UIImage(named: "icon_close"), for: .normal)
        return button
    }()
...
