...
        label.textAlignment = .center
        label.text = "Enter here"
        label.font = UIFont.systemFont(ofSize: 14, weight: .regular)
        return label
    }()
    
    private lazy var textField: CustomTextPaddingTextField = {
        let textField = CustomTextPaddingTextField()
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.autocapitalizationType = .none
        textField.layer.cornerRadius = 6
        textField.backgroundColor = UIColor(hexString: "#FAF7FD")
        textField.layer.borderWidth = 1
...
